--- a/css/styles.css
+++ b/css/styles.css
@@ -9,13 +9,7 @@ body {
     font-size: 16px;
     line-height: 1.5;
     color: #444;
-}
-
-/* Site Header */
-.header {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
+    background-color: #fff;
 }
 
 /* Container */
