--- a/css/styles.css
+++ b/css/styles.css
@@ -2,6 +2,10 @@
     box-sizing: border-box;
 }
 
+html {
+    scroll-behavior: smooth;
+}
+
 body {
     padding: 0;
     margin: 0;
@@ -30,7 +34,7 @@ body {
 /* Site header */
 .site-header {
     padding-top: 24px;
-    padding-bottom: 24px;
+    padding-bottom: 24px; 
 }
 
 .site-header-container {
@@ -153,6 +157,18 @@ body {
     opacity: 1;
 }
 
+.main-link-outline {
+    border-color: #fff;
+    color: #fff;
+    background-color: transparent;
+}
+
+.main-link-outline:hover {
+    border-color: transparent;
+    background-color: #DE2E54;
+    color: #fff;
+}
+
 
 /* MAin */
 
@@ -160,6 +176,7 @@ body {
 
 
 .hero {
+    margin-top: 24px;
     background-color: #0EB4C1;
     color: #fff;
 }
@@ -256,6 +273,34 @@ body {
 .index-services-actions {
     display: flex;
     justify-content: center;
+}
+
+/* CTA */
+
+.cta {
+    padding-top: 64px;
+    padding-bottom: 64px;
+    background-color: #0EB4C1;
+    color: #fff;
+}
+
+.cta-heading {
+    margin-top: 0;
+    margin-bottom: 40px;
+    font-family: "Open Sans", "Arial", sans-serif;
+    font-size: 36px;
+    line-height: 1.2;
+    text-align: center;
+}
+
+.cta-links {
+    display: flex;
+    justify-content: center;
+    text-align: center;
+}
+
+.cta-links-item:not(:last-child) {
+    margin-right: 40px;
 }
 
 
