--- a/css/styles.css
+++ b/css/styles.css
@@ -333,6 +333,19 @@ body {
         width: 40%;
         height: auto;
     }
+
+    .index-services {
+        padding-top: 80px;
+        padding-bottom: 80px;
+    }
+    
+    .index-services-list {
+        width: 100%;
+    }
+
+    .index-service-img {
+        margin-right: 32px;
+    }
 }
 
 @media only screen and (max-width: 800px)  {
@@ -358,9 +371,55 @@ body {
     }
 }
 
+@media only screen and (max-width: 700px) {
+    .index-services {
+        padding-top: 60px;
+        padding-bottom: 60px;
+    }
+
+    .index-services-heading {
+        font-size: 24px;
+        margin-bottom: 44px;
+    }
+    
+    .index-service {
+        align-items: flex-start;
+    }
+    
+    .index-service-img {
+        width: 120px;
+        height: 120px;
+    }
+}
+
 @media only screen and (max-width: 550px) {
     .hero-img {
         width: 75%;
     }
-}
 
+    .index-service {
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .index-services-item:not(:last-child) {
+        margin-bottom: 48px;
+    }
+
+    .index-service-img {
+        margin-right: 0;
+        margin-bottom: 24px;
+    }
+
+    .index-service-title {
+        text-align: center;
+    }
+
+    .index-service-content {
+        width: 100%;
+    }
+
+    .index-service-description {
+        text-align: justify;
+    }
+}
