Make site-header responsive

--- a/css/styles.css
+++ b/css/styles.css
@@ -33,6 +33,7 @@ body {
 
 /* Site header */
 .site-header {
+    position: relative;
     padding-top: 24px;
     padding-bottom: 24px; 
 }
@@ -84,8 +85,8 @@ body {
 .sitenav-list {
     display: flex;
     align-items: center;
-    padding: none;
-    margin: none;
+    padding: 0;
+    margin: 0;
     list-style: none;
 }
 
@@ -170,6 +171,10 @@ body {
     color: #fff;
 }
 
+.site-header-toggle-button {
+    display: none;
+}
+
 
 /* MAin */
 
@@ -177,7 +182,6 @@ body {
 
 
 .hero {
-    margin-top: 24px;
     background-color: #0EB4C1;
     color: #fff;
 }
@@ -324,6 +328,48 @@ body {
 }
 
 
+@media only screen and (max-width: 1100px) {
+    .site-header-site-logo {
+        margin-right: auto;
+    }
+
+    .site-header-main-link {
+        margin-right: 24px;
+    }
+    
+    .site-header-sitenav {
+        display: none;
+    }
+
+    .site-header-toggle-button {
+        display: block;
+        padding: 10px;
+        border: 1px solid #DE2E54;
+        background-color: #fff;
+        border-radius: 8px;
+    }
+
+    .site-header-open .site-header-sitenav {
+        display: block;
+        position: absolute;
+        left: 0;
+        top: 100%;
+        width: 100%;
+        padding: 30px;
+        background-color: #fff;
+    }
+
+    .site-header-sitenav .sitenav-list {
+        flex-direction: column;
+        align-items: flex-end;
+    }
+
+    .site-header-sitenav .sitenav-item:not(:last-child) {
+        margin-right: 0;
+        margin-bottom: 12px;
+    }
+}
+
 
 @media only screen and (max-width: 1000px)  {
     .hero-content {
@@ -352,6 +398,10 @@ body {
 }
 
 @media only screen and (max-width: 900px) {
+    .site-header-main-link {
+        display: none;
+    }
+    
     .site-footer-container {
         flex-direction: column;
     }
@@ -419,6 +469,15 @@ body {
 }
 
 @media only screen and (max-width: 550px) {
+    .container {
+        padding-left: 22px;
+        padding-right: 22px;
+    }
+
+    .site-header-open .site-header-sitenav {
+        padding: 22px;
+    }
+    
     .hero-img {
         width: 75%;
     }
